Closed
Bug 1274888
Opened 10 years ago
Closed 10 years ago
Crash in mozilla::EventStateManager::GetContentViewer
Categories
(Core :: DOM: Content Processes, defect)
Tracking
()
RESOLVED
FIXED
mozilla49
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: n.nethercote, Assigned: n.nethercote)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
1.18 KB,
patch
|
ting
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-c5e65108-90ac-4d3e-b0e4-8e6172160520.
=============================================================
We've had 6 crashes with this signature in the past 8 days in Nightly:
https://crash-stats.mozilla.com/signature/?product=Firefox&date=%3E%3D2016-04-20&signature=mozilla%3A%3AEventStateManager%3A%3AGetContentViewer&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&page=1#reports
The crash address is always 0x0, so it looks like a straightforward null deref, I looked at a minidump and GetWindow() was null.
| Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8755266 -
Flags: review?(janus926)
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → n.nethercote
Status: NEW → ASSIGNED
Comment 2•10 years ago
|
||
Comment on attachment 8755266 [details] [diff] [review]
Add a null check in mozilla::EventStateManager::GetContentViewer
Thanks for fixing this, I feel embarrassed that I'm making new crashes.
Attachment #8755266 -
Flags: review?(janus926) → review+
| Assignee | ||
Comment 3•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/5af962632d2e36b8200bcaa03b379aa1368defcb
Bug 1274888 - Add a null check in mozilla::EventStateManager::GetContentViewer. r=ting.
Comment 4•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in
before you can comment on or make changes to this bug.
Description
•