Bug 1274888 - Add a null check in mozilla::EventStateManager::GetContentViewer. r=ting.